--- a/index.html
+++ b/index.html
@@ -94,5 +94,10 @@
     </div>
 </div>
     <script src="src/index.js"></script>
+      <footer><p>
+      <a
+      href="https://github.com/TheresaMp/My-weather-App.git">open Source Code</a>
+      by Theresa Modipa </p>
+    </footer>
   </body>
 </html>
