--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <script src="src/index.js"></script>
       <footer><p>
       <a
-      href="https://github.com/TheresaMp/My-weather-App.git">open Source Code</a>
+      href="https://github.com/TheresaMp/My-weather-App.git"target="_blank">open Source Code</a>
       by Theresa Modipa </p>
     </footer>
   </body>
