--- a/index.html
+++ b/index.html
@@ -4,100 +4,91 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Weather App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Gloock&family=Manrope:wght@400;700&display=swap"
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/styles.css" />
-    <title>Weather App</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
   </head>
 
   <body>
-    <div class="container">
-      <div class="weather-app">
-        <form class="search-form" id="search-form">
-          <div class="row">
-            <div class="col-6">
-              <input
-                type="search"
-                placeholder="Type a city.."
-                autofocus="on"
-                autocomplete="off"
-                id="city-input"
-                class="form-control shadow-sm"
-              />
-            </div>
-            <div class="col-3">
-              <input
-                type="submit"
-                value="Search"
-                class="form-control btn btn-primary shadow-sm w-100"
-              />
-            </div>
-            <div class="col-3">
-              <button
-                class="btn btn-success w-100"
-                id="current-location-button"
-              >
-                Current
-              </button>
-            </div>
-          </div>
-        </form>
-        <h1 id="city"></h1>
-        <ul>
-          <li id="date"></li>
-          <li id="description"></li>
-        </ul>
-        <div class="row">
-          <div class="col-6">
-            <div class="clearfix">
-              <div class="float-left">
-                <span class="temperature" id="temperature"></span
-                ><span class="units">°C</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-6">
-            <ul>
-              <li>Humidity: <span id="humidity"></span>%</li>
-              <li>Wind: <span id="wind"></span> km/h</li>
-            </ul>
-          </div>
+    <div class="boarderDiv container">
+      <div class="firstPortion row">
+        <div class="col">
+          <form id="search-form">
+            <input
+              class="cityInputBar"
+              id="input-city"
+              type="search"
+              placeholder="Type a city. . . "
+              autocomplete="off"
+            />
+            <input
+              class="searchButton"
+              id="search-button-html"
+              type="submit"
+              value="Search"
+            />
+          </form>
         </div>
       </div>
-    </div>
-    <ul>
-    <div class="text-center">
-      <div class="row row-cols-5">
-        <div class="col fs-4 fw-bold">Wed</div>
-    <div class="col fs-4fw-bold">Thurs</div>
-  <div class="col fs-4fw-bold">Fri</div>
-<div class="col fs-4fw-bold">Sat</div>
-<div class="col fs-4fw-bold">Sun</div>  
-</ul>
-</div>
-</div>
 
-<div class="text-center">
-  <div class="row row-cols-5">
-    <div class="col fs-4fw-bold">13°C</div>
-    <div class="col fs-4fw-bold">19°C</div>
-    <div class="col fs-4fw-bold">27°C</div>
-    <div class="col fs-4fw-bold">11°C</div>
-    <div class="col fs-4fw-bold">12°C</div>
+      <div class="secondPortion row">
+        <div class="col">
+          <h3 class="weatherConditionDescription"></h3>
+          <h1 class="cityPlaceholder" id="users-city-name-html"></h1>
 
+          <h3 class="currentDayAndTime"></h3>
+        </div>
+      </div>
+
+      <div class="thirdPortion row">
+        <div class="col-6">
+          <img
+            src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
+            alt=""
+            class="mainEmojiSymbol"
+            id="emoji-symbol"
+          />
+          <p class="exactTemp"></p>
+          <span class="col-2 degreesUnits">
+            <sup>
+              <a href="#" class="degreesCelsius active"
+                >°C<span class="unitsDivider"></span
+              ></a>
+            </sup>
+          </span>
+        </div>
+
+        <div class="col-6">
+          <ul class="weatherAttributes">
+            <li class="humidityAttribute">Humidity:</li>
+            <li class="windAttribute">Wind:</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="fourthPortion" id="forecast"></div>
     </div>
-    </div>
-</div>
-    <script src="src/index.js"></script>
-      <footer><p>
-      <a
-      href="https://github.com/TheresaMp/My-weather-App.git"target="_blank">open Source Code</a>
-      by Theresa Modipa </p>
-    </footer>
+    <p class="author">
+      <a href="https://github.com/TheresaMp/My-weather-App" target="_blank"
+        >Open source-coded</a
+      >
+
+      <small> by Theresa Modipa</small>
+    </p>
   </body>
+  <script src="src/index.js"></script>
 </html>
